fixed a bug where long messages inside ion-items wouldn’t wrap

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -78,6 +78,11 @@ div.item
   margin: 5px;
   text-align: center;
 }
+ion-item.item.wrap 
+{
+  white-space: normal;
+  text-align: center;
+}
 .item-complex .item-content, .item-radio .item-content
 {
   padding: 16px;
